@@ -26,12 +26,20 @@
 <table class="grid" cellpadding="5" border="1">
 <p></p>
 <tr>
-<th>Version</th>
+<th>Build</th>
+<th>Platform Driver</th>
 <th>Date</th>
 </tr>
 <tr>
+<td><a href="http://people.redhat.com/handcock/eclipse-rpm/eclipse-rpm-3_0-M1">3.0 M1</a></td>
+<td>3.1 M7</td>
+<td>2005-05-30</td>
+</tr>
+
+<tr>
 <td><a href="http://people.redhat.com/jhealy/plugins/eclipse-rpm.zip">Initial contribution</a></td>
-<td>October 13, 2004</td>
+<td>3.0</td>
+<td>2004-10-13</td>
 </tr>
 </table>
 <p></p>
