@@ -50,6 +50,13 @@ href="http://www.eclipse.org">Eclipse</a> platform.</p>
 <table width="100%" cellspacing="5" cellpadding="5">
 <tr><td>
 
+<p class="subsection">Eclipse-RPM 3.0 M1</p>
+<p>The first milestone build of Eclipse-RPM 3.0 has been posted.  See the <a
+href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/downloads.html?cvsroot=Tools_Project">Downloads</a>
+page to download the build.</p>
+
+<p class="timestamp">posted 2005-05-30 by Jeremy Handcock</p>
+
 <p class="subsection">Eclipse-RPM 3.0 Plan</p>
 
 <p>A draft of the <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/planning/eclipse-rpm-3_0.html?cvsroot=Tools_Project">Eclipse-RPM 3.0 development plan</a> is now available.  Comments and feedback are greatly appreciated and should be directed toward the mailing list.</p>
